# RL-CollectiveTransport

./: .gitignore  .lldbinit  CLAUDE.md  CMakeLists.txt  KNOWN_NONDETERMINISM.md  README.md  RunOnVicon.md  TheSituationRoom.txt  batch-run.sh  batch-test-loop.sh  batch-test.sh  batch-test_1.sh  batch-test_old.sh  batch-train-new.sh  batch-train.sh  batch_viz.sh  best-models.csv  buildScript.sh  collectiveRlTransport.argos  collectiveRlTransport.bzz  collectiveRlTransport.cpp  collectiveRlTransport.h  collectiveRlTransport.h.old  copy-best.sh  exp_config.yml  network_build.sh  pyproject.toml  quick-build.sh  run_baseline_experiments.py  run_exp.sh  run_exp_cluster.sh  single-train.sh  submit_job.sh  temp.txt  test_config.yml  test_exp.sh  test_out_of_dist_exp.sh  train_progress.csv  verify_environment.py  weird-bug
argos/: CMakeLists.txt  README_VICON.md  cmPrediction.bzz  cmPrediction.cpp  cmPrediction.h  cmPrediction0.argos  cmPrediction1.argos  cmPredictionForcedMovement.cpp  cmPredictionForcedMovement.h  cmPrediction_qtuser_functions.cpp  cmPrediction_qtuser_functions.h  collectiveRlTransport-1.argos  collectiveRlTransport.argos  collectiveRlTransport.bdb  collectiveRlTransport.bo  collectiveRlTransport.bzz  collectiveRlTransport.cpp  collectiveRlTransport.cpp.old  collectiveRlTransport.h  collectiveRlTransport0.argos  collectiveRlTransport1.argos  collectiveRlTransport2.argos  collectiveRlTransportNetworking.bzz  collectiveRlTransportNetworking.cpp  collectiveRlTransportNetworking.h  collectiveRlTransportReal0.argos  collectiveRlTransportReal1.argos  collectiveRlTransportReal2.argos  collectiveRlTransportViconFactoryTest.argos  collectiveRlTransportViconFactoryTest.bzz  collectiveRlTransportViconReset.argos  collectiveRlTransportViconReset.bzz  collectiveRlTransport_bash.argos  collectiveRlTransport_cm_prediction_template.argos  collectiveRlTransport_qtuser_functions.cpp  collectiveRlTransport_qtuser_functions.h  collectiveRlTransport_template.argos  collectiveRlTransport_template_kheperaiv.argos  collectiveRlTransport_test.argos  generate_argos.py
pytorch/: .txt  Attention_Testing.py  CMMain.py  CMakeLists.txt  Intention_network_testing.py  Main.py  cmVizPlot.py  find-best-model.fasl  find-best-model.lisp  gmain.py  old_Main.py  pp.py  pytorch_server.py  pytorch_server_tmp.py  pytorchcomm.cpp  pytorchcomm.h  test_Agent.py  test_pytorchcomm.cpp
pytorch/gdata/: Data_Episode_20230423-2102400.csv
pytorch/gmodels/: trained_gat_dqn_20230424-120252.pth  trained_gat_dqn_20230424-120356.pth  trained_gat_dqn_20230424-120500.pth  trained_gat_dqn_20230424-120605.pth  trained_gat_dqn_20230424-120709.pth  trained_gat_dqn_20230424-120815.pth  trained_gat_dqn_20230424-120921.pth  trained_gat_dqn_20230424-121028.pth  trained_gat_dqn_20230424-121512.pth  trained_gat_dqn_20230424-121616.pth  trained_gat_dqn_20230424-121721.pth  trained_gat_dqn_20230424-160515.pth  trained_gat_dqn_20230424-160733.pth
pytorch/python_code/: Actor.py  Agent.py  DDPGAgent.py  DQNAgent.py  FinAgent.py  LearningAids.py  TD3Agent.py  TD3_networks.py  agent_dqn.py  cmRewardsDisPlot.py  comms_viz.py  communications.py  data_parsing.py  deep_q.py  deep_q_comms.py  deep_q_network.py  grad_viz.py  mailbox.py  make_cylinder_trajectory.py  model_server.py  networks.py  networks_torch.py  old_Agent.py  parser.py  replay_buffer.py  results_plotting.py  socket_utility.py  training_time_data_visualization.py  utils.py  viz.py  zmq_utility.py
pytorch/python_code/learning_schemes/: DQN.py  DQNCore.py
pytorch/recording_folder/Data/: Data_Episode_0.csv  Data_Episode_100.csv  Data_Episode_1000.csv  Data_Episode_101.csv  Data_Episode_102.csv  Data_Episode_104.csv  Data_Episode_105.csv  Data_Episode_106.csv  Data_Episode_108.csv  Data_Episode_109.csv  Data_Episode_110.csv  Data_Episode_111.csv  Data_Episode_112.csv  Data_Episode_115.csv  Data_Episode_119.csv  Data_Episode_120.csv  Data_Episode_122.csv  Data_Episode_123.csv  Data_Episode_124.csv  Data_Episode_127.csv  Data_Episode_128.csv  Data_Episode_131.csv  Data_Episode_133.csv  Data_Episode_136.csv  Data_Episode_137.csv  Data_Episode_140.csv  Data_Episode_141.csv  Data_Episode_147.csv  Data_Episode_150.csv  Data_Episode_151.csv  Data_Episode_152.csv  Data_Episode_153.csv  Data_Episode_156.csv  Data_Episode_157.csv  Data_Episode_158.csv  Data_Episode_159.csv  Data_Episode_160.csv  Data_Episode_164.csv  Data_Episode_165.csv  Data_Episode_167.csv  (+297 more)
pytorch/recording_folder/Models/: Episode_0_Attention_Encoder  Episode_0_DDQN  Episode_0_DQN  Episode_0_actor_0_DDPG_intention  Episode_0_critic_1_0_DDPG_intention  Episode_0_target_actor_0_DDPG_intention  Episode_0_target_critic_1_0_DDPG_intention  Episode_100_Attention_Encoder  Episode_100_DDQN  Episode_100_actor_0_DDPG_intention  Episode_100_critic_1_0_DDPG_intention  Episode_100_target_actor_0_DDPG_intention  Episode_100_target_critic_1_0_DDPG_intention  Episode_10_Attention_Encoder  Episode_10_DDQN  Episode_10_actor_0_DDPG_intention  Episode_10_critic_1_0_DDPG_intention  Episode_10_target_actor_0_DDPG_intention  Episode_10_target_critic_1_0_DDPG_intention  Episode_110_Attention_Encoder  Episode_110_DDQN  Episode_110_actor_0_DDPG_intention  Episode_110_critic_1_0_DDPG_intention  Episode_110_target_actor_0_DDPG_intention  Episode_110_target_critic_1_0_DDPG_intention  Episode_120_Attention_Encoder  Episode_120_DDQN  Episode_120_actor_0_DDPG_intention  Episode_120_critic_1_0_DDPG_intention  Episode_120_target_actor_0_DDPG_intention  Episode_120_target_critic_1_0_DDPG_intention  Episode_130_Attention_Encoder  Episode_130_DDQN  Episode_130_actor_0_DDPG_intention  Episode_130_critic_1_0_DDPG_intention  Episode_130_target_actor_0_DDPG_intention  Episode_130_target_critic_1_0_DDPG_intention  Episode_140_Attention_Encoder  Episode_140_DDQN  Episode_140_actor_0_DDPG_intention  (+561 more)
pytorch/recording_folder/Test_Data/Data/: Data_Episode_0.csv  Data_Episode_1.csv  Data_Episode_11.csv  Data_Episode_12.csv  (+50 more)
server/: CMakeLists.txt  ModelServerClient.cpp  ModelServerClient.hpp
server/python_code/: agent.py  agent_dqn.py  dqn_model.py
(+867 files in other folders)
