[tool.poetry]
package-mode = false
name = "rl-collectivetransport"
version = "2.0.0"
description = "Collective Transport trained using RL from the GSP-RL library"
authors = ["jdbloom <jdbloom@wpi.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gsp-rl = {path = "../GSP-RL", develop = true}

[tool.poetry.extras]
hdf5 = ["h5py"]

[tool.poetry.dependencies.h5py]
version = "^3.0"
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["rl_code"]
addopts = "-m 'not slow and not integration'"
markers = [
    "slow: convergence tests (deselect with '-m \"not slow\"')",
    "integration: full ARGoS integration tests requiring simulator installed",
    "determinism: determinism integration tests (subprocess + ZMQ stub, no ARGoS required)",
]
